--- a/src/Todo-Api/Todo-Api.csproj
+++ b/src/Todo-Api/Todo-Api.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0"/>
     </ItemGroup>
 
 </Project>
