--- a/src/DotNetUnknown/DotNetUnknown.csproj
+++ b/src/DotNetUnknown/DotNetUnknown.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1"/>
         <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0"/>
         <PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0"/>
+        <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0"/>
     </ItemGroup>
 
 </Project>
