Add Jwt Validation for Authentication/Authorization.
And, Apply to all controller endpoints.

Also, provide a GenerateToken method (typically should be placed in a authorization server) for better testing use.

Modify WebTestSupport to add a jwt token for HttpClient before sending each requests.

Security Endpoints Integration tests.

Closes: #13
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "TXlTdXBlclNlY3JldEtleUZvcldlYkFwcGxpY2F0aW9uMTIzNDU=",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  }
 }
