Add Aop Usage using Castle
Closes: #15
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/DotNetUnknown.csproj
+++ b/src/DotNetUnknown/DotNetUnknown.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0"/>
         <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0"/>
+        <PackageReference Include="Castle.Core" Version="5.2.1"/>
     </ItemGroup>
 
 </Project>
