--- a/test/DotNetUnknown.Tests/DotNetUnknown.Tests.csproj
+++ b/test/DotNetUnknown.Tests/DotNetUnknown.Tests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="NUnit" Version="4.4.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.11.2"/>
         <PackageReference Include="NUnit3TestAdapter" Version="6.0.0"/>
+        <PackageReference Include="Testcontainers.PostgreSql" Version="4.9.0"/>
     </ItemGroup>
 
     <ItemGroup>
