--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,9 +19,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: 10.0.x
+        dotnet-version: 10.0.100
         global-json-file: global.json
-
+    - name: dotnet info 
+      run: dotnet --info
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
