--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 10.0.100
         global-json-file: global.json
-    - name: dotnet info 
-      run: dotnet --info
+    - name: dotnet list packages 
+      run: dotnet list package --include-transitive
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
