--- a/test/DotNetUnknown.Tests/DotNetUnknown.Tests.csproj
+++ b/test/DotNetUnknown.Tests/DotNetUnknown.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.4"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
