--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Urls": "http://localhost:5050",
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=5432;Database=mydatabase;Username=myuser;Password=secret;"
+  },
+  "Serilog": {
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId",
+      "WithSpan"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz}] [{Level:u3}] [{SourceContext}] [{ThreadId}] [{TraceId} - {SpanId}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "JwtSettings": {
