Add Health Check Usage.
- Add a Startup health check which simulate a long-running task.
- Add DBContext health check using Microsoft Diagnostics Extension
- Add a HealthCheckPublisher which pull the health status every 60s.
- Customize the `/health` endpoint response structure.

Closes: #42
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -23,5 +23,8 @@
     "Key": "TXlTdXBlclNlY3JldEtleUZvcldlYkFwcGxpY2F0aW9uMTIzNDU=",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience"
+  },
+  "HealthCheck": {
+    "EnablePublisher": false
   }
 }
