--- a/src/DotNetUnknown/DotNetUnknown.csproj
+++ b/src/DotNetUnknown/DotNetUnknown.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1"/>
         <PackageReference Include="Castle.Core" Version="5.2.1"/>
+        <PackageReference Include="DistributedLock.Postgres" Version="1.3.0"/>
     </ItemGroup>
 
 </Project>
