--- a/src/DotNetUnknown/DotNetUnknown.csproj
+++ b/src/DotNetUnknown/DotNetUnknown.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1"/>
         <PackageReference Include="Castle.Core" Version="5.2.1"/>
         <PackageReference Include="DistributedLock.Postgres" Version="1.3.0"/>
+        <PackageReference Include="NCrontab" Version="3.4.0"/>
     </ItemGroup>
 
 </Project>
