Add Concrete Job.
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -27,20 +27,18 @@
   "HealthCheck": {
     "EnablePublisher": false
   },
-  "Crontab": [
-    {
-      "JobName": "Job1",
-      "Cron": "* * * * *",
+  "Crontab": {
+    "Job1": {
+      "crontab": "* * * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
       "AllowConcurrentExecution": false
     },
-    {
-      "JobName": "Job2",
-      "Cron": "0 * * * *",
+    "Job2": {
+      "crontab": "0 * * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": true,
       "AllowConcurrentExecution": false
     }
-  ]
+  }
 }
