Optimize auto register JobExecutor
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -29,15 +29,15 @@
   },
   "Crontab": {
     "Job1": {
-      "crontab": "* * * * *",
+      "crontab": "* */5 * * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
       "AllowConcurrentExecution": false
     },
     "Job2": {
-      "crontab": "0 * * * *",
+      "crontab": "* * */3 * * *",
       "Jitter": 0,
-      "AllowLocalConcurrentExecution": true,
+      "AllowLocalConcurrentExecution": false,
       "AllowConcurrentExecution": false
     }
   }
