Add Endpoint to trigger job
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -29,16 +29,16 @@
   },
   "Crontab": {
     "Job1": {
-      "crontab": "* */5 * * * *",
+      "crontab": "0 */5 * * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
-      "AllowConcurrentExecution": false
+      "AllowConcurrentExecution": true
     },
     "Job2": {
-      "crontab": "* * */3 * * *",
+      "crontab": "0 0 */3 * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
-      "AllowConcurrentExecution": false
+      "AllowConcurrentExecution": true
     }
   }
 }
