Add job endpoint integration test
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -32,13 +32,13 @@
       "crontab": "0 */5 * * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
-      "AllowConcurrentExecution": true
+      "AllowConcurrentExecution": false
     },
     "Job2": {
       "crontab": "0 0 */3 * * *",
       "Jitter": 0,
       "AllowLocalConcurrentExecution": false,
-      "AllowConcurrentExecution": true
+      "AllowConcurrentExecution": false
     }
   }
 }
