Add Cron Job Scheduling using NCrontab + BackgroundService. (#56)
Abstract the Cron JobExecutor, Make Job Configurable.
Register each Job with a JobExecutor
By Default, does not AllowConcurrentExecution (distribute also)

Note: each Job is a BackgroundService, using NCrontab to calculate the next execution time.

Closes: #55

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -26,5 +26,19 @@
   },
   "HealthCheck": {
     "EnablePublisher": false
+  },
+  "Crontab": {
+    "Job1": {
+      "crontab": "0 */5 * * * *",
+      "Jitter": 0,
+      "AllowLocalConcurrentExecution": false,
+      "AllowConcurrentExecution": false
+    },
+    "Job2": {
+      "crontab": "0 0 */3 * * *",
+      "Jitter": 0,
+      "AllowLocalConcurrentExecution": false,
+      "AllowConcurrentExecution": false
+    }
   }
 }
