--- a/src/DotNetUnknown/DotNetUnknown.csproj
+++ b/src/DotNetUnknown/DotNetUnknown.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Castle.Core" Version="5.2.1"/>
         <PackageReference Include="DistributedLock.Postgres" Version="1.3.0"/>
         <PackageReference Include="NCrontab" Version="3.4.0"/>
+        <PackageReference Include="Confluent.Kafka" Version="2.13.0"/>
     </ItemGroup>
 
 </Project>
