Add Cache (Local/Distribute-Redis).
Use Redis Docker Compose & Test Container.

Use Options to support override configuration in test env. fix fixed port conflicts in test container.

closes: #66
Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/DotNetUnknown/appsettings.json
+++ b/src/DotNetUnknown/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Urls": "http://localhost:5050",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=mydatabase;Username=myuser;Password=secret;"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=mydatabase;Username=myuser;Password=secret;",
+    "RedisConnection": "localhost:6379"
   },
   "Serilog": {
     "Enrich": [
@@ -40,5 +41,8 @@
       "AllowLocalConcurrentExecution": false,
       "AllowConcurrentExecution": false
     }
+  },
+  "Kafka": {
+    "BootstrapServers": "localhost:9092"
   }
 }
