--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,14 @@
       - type: volume
         source: postgres-data
         target: /var/lib/postgresql/data
+  redis:
+    image: redis:8.4.0
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: redis-server --appendonly yes
   kafka:
     image: apache/kafka:4.1.1
     hostname: kafka
@@ -50,8 +58,11 @@
 networks:
   kafka-network:
     driver: bridge
+  redis-network:
+    driver: bridge
 
 volumes:
   postgres-data:
   kafka-data:
   kraft-data:
+  redis-data:
